--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "yearlyreps.tompaton.com"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "mako>=1.3.9",
     "nanodjango>=0.9.2",
 ]
