--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-data/
-*.pyc
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+db.sqlite3
