--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "yearlyreps.tompaton.com"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django>=5.1.7",
+    "django-ninja>=1.3.0",
     "mako>=1.3.9",
-    "nanodjango>=0.9.2",
 ]
