--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Log in to Docker registry
       uses: docker/login-action@v2
       with:
-        registry: ${{ secrets.DOCKER_REGISTRY }}
-        username: ${{ secrets.DOCKER_USERNAME }}
+        registry: $DOCKER_REGISTRY
+        username: $DOCKER_USERNAME
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
@@ -29,8 +29,8 @@ jobs:
     - name: Copy production files to server
       uses: appleboy/scp-action@v0.1.7
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        host: $SERVER_HOST
+        username: $SERVER_USERNAME
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         source: "production.env,production.yml"
         target: /var/data/yearlyreps.tompaton.com/
@@ -38,8 +38,8 @@ jobs:
     - name: Deploy on server
       uses: appleboy/ssh-action@v1.2.2
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        host: $SERVER_HOST
+        username: $SERVER_USERNAME
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /var/data/yearlyreps.tompaton.com
